[package]
name = "rusty-titanic"
version = "0.1.0"
authors = ["Jason Reilly <jdr0887@gmail.com>"]

[lib]
name = "rusty_titanic"
path = "src/lib.rs"

[dependencies]
bincode = "1.1.2"
chrono = "0.4.7"
clap = "2.21"
libmath = "0.2.1"
csv = "1.1.1"
dirs = "2.0.2"
flate2 = "1.0.7"
glob = "0.3.0"
humantime = "1.2.0"
itertools = "0.8.1"
lazy_static = "1.3.0"
log = { version = "^0.4.8", features = ["std"] }
num_cpus = "1.10.0"
rand = "0.7.2"
rayon = "1.2.0"
regex = "1.3.1"
simple_logger = "1.3.0"
serde = "1.0.89"
serde_derive = "1.0.89"
structopt = "0.2.15"
strum = "0.15.0"
strum_macros = "0.15.0"
threadpool = "1.7.1"
uuid = { version = "0.7", features = ["serde", "v4"] }
walkdir = "2.2.7"
rusty-machine = "0.5.4"
rulinalg="0.4.2"
rustlearn="0.5.0"
